--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,14 @@ font-family: 'Poppins', sans-serif;
 body {
   margin: 0;
   background-color: var(--light);
-  width: 100vh;
+  position: "relative";
+  width: 100vw;
   overflow: hidden;
 }
 
 main {
-  width: 100vh;
+  width: 100vw;
   overflow: hidden;
+  position: "relative";
+  z-index: 5;
 }
